Add initial HTML structure and styles for game

--- a/index.html
+++ b/index.html
@@ -1,1 +1,535 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>African Foodways: Odd One Out</title>
 
+  <style>
+    :root{
+      --bg1:#1a2a3a;
+      --bg2:#0d1b2a;
+      --accent:#f9a826;
+      --muted:#b8c7d6;
+      --text:#e0e0e0;
+      --panel: rgba(26,42,58,0.82);
+      --tileA:#e8d0b0;
+      --tileB:#b08968;
+      --tileBorder:#c49a6c;
+    }
+
+    *{ box-sizing:border-box; }
+    body{
+      background: linear-gradient(135deg, var(--bg1), var(--bg2));
+      color: var(--text);
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 20px;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+    }
+
+    .container{ width:100%; max-width: 960px; text-align:center; }
+
+    h1{ color: var(--accent); font-size: 2rem; margin: 10px 0 6px; }
+    .subtitle{ color: var(--muted); margin: 0 0 14px; }
+
+    .top-row{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:12px;
+      flex-wrap:wrap;
+      margin: 10px 0 12px;
+    }
+
+    .stats{
+      display:flex;
+      gap:16px;
+      justify-content:center;
+      flex-wrap:wrap;
+      color: var(--accent);
+      font-size: 1.05rem;
+    }
+
+    .controls{
+      display:flex;
+      gap:10px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+
+    button{
+      background: linear-gradient(135deg, var(--accent), #e8951e);
+      color:#1a2a3a;
+      border:none;
+      padding: 10px 14px;
+      border-radius: 8px;
+      font-weight: 800;
+      cursor:pointer;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, opacity 0.15s ease;
+    }
+    button:hover{ transform: translateY(-2px); box-shadow: 0 4px 12px rgba(249,168,38,0.40); }
+    button:disabled{ opacity:0.55; cursor:not-allowed; }
+
+    .timer-wrap{
+      max-width: 520px;
+      margin: 0 auto 14px;
+      background: var(--panel);
+      border-radius: 12px;
+      padding: 12px 14px;
+      border: 1px solid rgba(255,255,255,0.10);
+      text-align:left;
+    }
+    .timer-label{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      color: var(--muted);
+      font-size: 0.95rem;
+      margin-bottom: 10px;
+    }
+    .bar{
+      width:100%;
+      height:12px;
+      border-radius: 999px;
+      background: rgba(255,255,255,0.12);
+      overflow:hidden;
+    }
+    .bar > div{
+      height:100%;
+      width:100%;
+      background: linear-gradient(135deg, var(--accent), #e8951e);
+      transform-origin:left center;
+      transform: scaleX(1);
+    }
+    .hint{
+      color: var(--muted);
+      font-size: 0.9rem;
+      margin-top: 10px;
+      line-height: 1.35;
+    }
+
+    .game-board{
+      display:grid;
+      grid-template-columns: repeat(2, minmax(140px, 1fr));
+      gap: 14px;
+      max-width: 520px;
+      margin: 0 auto 16px;
+    }
+
+    .tile{
+      aspect-ratio: 1 / 1;
+      background: linear-gradient(145deg, var(--tileA), var(--tileB));
+      border: 3px solid var(--tileBorder);
+      border-radius: 12px;
+      cursor: pointer;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, border-color 0.15s ease;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size: 3.2rem;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.45);
+      overflow:hidden;
+      outline:none;
+    }
+
+    .tile:hover{ transform: scale(1.03); }
+    .tile:focus-visible{
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(249,168,38,0.35), 0 5px 15px rgba(0,0,0,0.45);
+    }
+
+    .tile.flipped{ background:#ffffff; }
+    .tile img{
+      width: 92%;
+      height: 92%;
+      object-fit: cover;
+      border-radius: 10px;
+      pointer-events:none;
+      display:block;
+    }
+
+    .tile.selected{
+      border-color: var(--accent);
+      box-shadow: 0 0 18px rgba(249,168,38,0.70), 0 5px 15px rgba(0,0,0,0.45);
+    }
+
+    .tile.wrong{
+      animation: shake 0.45s;
+      border-color:#ff4444;
+    }
+
+    .tile.correct-reveal{
+      border-color:#7CFF7C;
+      box-shadow: 0 0 16px rgba(124,255,124,0.55), 0 5px 15px rgba(0,0,0,0.45);
+    }
+
+    @keyframes shake {
+      0%,100%{ transform: translateX(0); }
+      25%{ transform: translateX(-5px); }
+      75%{ transform: translateX(5px); }
+    }
+
+    .feedback{
+      min-height: 90px;
+      padding: 16px;
+      background: var(--panel);
+      border-radius: 12px;
+      margin: 0 auto 12px;
+      max-width: 720px;
+      text-align:left;
+      line-height: 1.45;
+      font-size: 1.02rem;
+    }
+
+    @media (max-width: 520px){
+      .game-board{ grid-template-columns: repeat(2, minmax(120px, 1fr)); }
+      .tile{ font-size: 2.7rem; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>African Foodways: Odd One Out</h1>
+    <p class="subtitle">Reveal all four. Then click the impostor—before the timer runs out.</p>
+
+    <div class="top-row">
+      <div class="stats" aria-label="Game statistics">
+        <div>Round: <span id="round">1</span>/<span id="total-rounds">0</span></div>
+        <div>Score: <span id="score">0</span></div>
+      </div>
+
+      <div class="controls">
+        <button id="tick-btn" aria-pressed="false">🔇 Tick: Off</button>
+        <button id="restart-btn">🆕 Restart</button>
+      </div>
+    </div>
+
+    <div class="timer-wrap" aria-label="Round timer">
+      <div class="timer-label">
+        <span>Time left</span>
+        <span><span id="time-left">10</span>s</span>
+      </div>
+      <div class="bar" role="progressbar" aria-valuemin="0" aria-valuemax="10" aria-valuenow="10">
+        <div id="bar-fill"></div>
+      </div>
+      <div class="hint">
+        Images must live in <strong>/images/</strong> at the repo root.
+        Example URL: <code>/odd-out-match-game/images/fufu1.jpg</code>
+      </div>
+    </div>
+
+    <div class="game-board" id="board" aria-label="Odd one out board"></div>
+
+    <div class="feedback" id="feedback" aria-live="polite">
+      Click tiles to reveal images. After all four are revealed, pick the odd one out.
+    </div>
+
+    <button id="next-btn" style="display:none;">Next Round</button>
+  </div>
+
+  <script>
+    // ==================== CONFIG ====================
+    const ROUND_SECONDS = 10;
+
+    // ==================== ROUNDS (STATIC) ====================
+    const rounds = [
+      {
+        name: "Fufu Variations",
+        odd: 3,
+        images: ['fufu1.jpg', 'fufu2.jpg', 'fufu3.jpg', 'mashed-potato.jpg'],
+        explain: "Mashed potatoes are the odd one out. Fufu is pounded cassava/yam/plantain and eaten with soup; mashed potatoes are whipped and typically eaten with a fork."
+      }
+      // Add round 2+ after you upload those images too.
+    ];
+
+    // ==================== STATE ====================
+    let currentRound = 0;
+    let score = 0;
+    let revealed = new Set(); // indices
+    let solved = false;
+
+    let timerId = null;
+    let timeLeft = ROUND_SECONDS;
+
+    // Tick sound (optional)
+    let tickOn = false;
+    let audioCtx = null;
+
+    // ==================== DOM ====================
+    const boardEl = document.getElementById('board');
+    const feedbackEl = document.getElementById('feedback');
+    const nextBtn = document.getElementById('next-btn');
+    const restartBtn = document.getElementById('restart-btn');
+    const tickBtn = document.getElementById('tick-btn');
+
+    const roundEl = document.getElementById('round');
+    const totalRoundsEl = document.getElementById('total-rounds');
+    const scoreEl = document.getElementById('score');
+
+    const timeLeftEl = document.getElementById('time-left');
+    const barFill = document.getElementById('bar-fill');
+    const progressBar = document.querySelector('.bar');
+
+    totalRoundsEl.textContent = String(rounds.length);
+
+    function setFeedback(html){ feedbackEl.innerHTML = html; }
+
+    // ==================== ASSET PATH ====================
+    // This resolves correctly on GitHub Pages regardless of subfolders.
+    function imgUrl(fileName){
+      return new URL(`images/${fileName}`, document.baseURI).href;
+    }
+
+    // ==================== AUDIO ====================
+    function ensureAudio(){
+      if(!tickOn) return null;
+      const Ctx = window.AudioContext || window.webkitAudioContext;
+      if(!Ctx) return null;
+      if(!audioCtx) audioCtx = new Ctx();
+      if(audioCtx.state === 'suspended'){
+        audioCtx.resume().catch(()=>{});
+      }
+      return audioCtx;
+    }
+
+    function playTick(){
+      const ctx = ensureAudio();
+      if(!ctx) return;
+
+      const o = ctx.createOscillator();
+      const g = ctx.createGain();
+      o.type = 'sine';
+      o.frequency.value = 850;
+
+      const now = ctx.currentTime;
+      g.gain.setValueAtTime(0.0001, now);
+      g.gain.linearRampToValueAtTime(0.04, now + 0.005);
+      g.gain.linearRampToValueAtTime(0.0001, now + 0.05);
+
+      o.connect(g);
+      g.connect(ctx.destination);
+
+      o.start(now);
+      o.stop(now + 0.06);
+    }
+
+    function updateTickButton(){
+      tickBtn.setAttribute('aria-pressed', String(tickOn));
+      tickBtn.textContent = tickOn ? '🔊 Tick: On' : '🔇 Tick: Off';
+    }
+
+    tickBtn.addEventListener('click', () => {
+      tickOn = !tickOn;
+      updateTickButton();
+      if(tickOn){
+        ensureAudio();
+        playTick();
+      }
+    });
+
+    // ==================== TIMER ====================
+    function stopTimer(){
+      if(timerId) clearInterval(timerId);
+      timerId = null;
+    }
+
+    function updateTimerUI(){
+      timeLeftEl.textContent = String(timeLeft);
+      const ratio = Math.max(0, Math.min(1, timeLeft / ROUND_SECONDS));
+      barFill.style.transform = `scaleX(${ratio})`;
+      progressBar.setAttribute('aria-valuenow', String(timeLeft));
+    }
+
+    function startTimer(){
+      stopTimer();
+      timeLeft = ROUND_SECONDS;
+      updateTimerUI();
+
+      timerId = setInterval(() => {
+        if(solved){ stopTimer(); return; }
+        timeLeft -= 1;
+        if(tickOn) playTick();
+        updateTimerUI();
+
+        if(timeLeft <= 0){
+          stopTimer();
+          onTimeUp();
+        }
+      }, 1000);
+    }
+
+    function onTimeUp(){
+      const round = rounds[currentRound];
+      revealAllTiles();
+      highlightCorrect(round.odd);
+      solved = true;
+      setFeedback(`<strong>Time’s up!</strong> The odd one out was highlighted.<br/>${round.explain}`);
+      nextBtn.style.display = 'inline';
+    }
+
+    // ==================== ROUND SETUP ====================
+    function initRound(){
+      stopTimer();
+      revealed.clear();
+      solved = false;
+      boardEl.innerHTML = '';
+      nextBtn.style.display = 'none';
+
+      const round = rounds[currentRound];
+      roundEl.textContent = String(currentRound + 1);
+
+      setFeedback(`Round ${currentRound + 1}: <strong>${round.name}</strong><br/>Reveal all four tiles.`);
+
+      for(let i=0;i<4;i++){
+        const tile = document.createElement('div');
+        tile.className = 'tile';
+        tile.dataset.index = String(i);
+        tile.tabIndex = 0;
+        tile.setAttribute('role', 'button');
+        tile.setAttribute('aria-label', `Tile ${i + 1}, hidden`);
+        tile.textContent = '?';
+        boardEl.appendChild(tile);
+      }
+
+      startTimer();
+    }
+
+    function makeMissingSvg(text){
+      const safe = String(text).replace(/[<>&"]/g, '');
+      const svg =
+        `<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200">
+          <rect width="100%" height="100%" fill="#f9a826"/>
+          <text x="50%" y="42%" text-anchor="middle" font-size="16" font-family="Arial" fill="#1a2a3a">Missing file</text>
+          <text x="50%" y="62%" text-anchor="middle" font-size="10" font-family="Arial" fill="#1a2a3a">${safe}</text>
+        </svg>`;
+      return 'data:image/svg+xml;utf8,' + encodeURIComponent(svg);
+    }
+
+    function flipTile(tileEl, idx){
+      const round = rounds[currentRound];
+      const fileName = round.images[idx];
+
+      revealed.add(idx);
+      tileEl.classList.add('flipped');
+      tileEl.textContent = '';
+
+      const img = document.createElement('img');
+      const url = imgUrl(fileName);
+
+      img.src = url;
+      img.alt = round.name;
+      img.onerror = () => { img.src = makeMissingSvg(`images/${fileName}`); };
+
+      tileEl.appendChild(img);
+      tileEl.setAttribute('aria-label', `Tile ${idx + 1}, revealed`);
+
+      if(revealed.size === 4){
+        setFeedback(`Round ${currentRound + 1}: <strong>${round.name}</strong><br/>Now click the odd one out.`);
+      }
+    }
+
+    function revealAllTiles(){
+      boardEl.querySelectorAll('.tile').forEach(tileEl => {
+        const idx = Number(tileEl.dataset.index);
+        if(!revealed.has(idx)) flipTile(tileEl, idx);
+      });
+    }
+
+    function highlightCorrect(correctIdx){
+      const tile = boardEl.querySelector(`.tile[data-index="${correctIdx}"]`);
+      if(tile) tile.classList.add('correct-reveal');
+    }
+
+    function clearSelections(){
+      boardEl.querySelectorAll('.tile').forEach(t => t.classList.remove('selected','wrong'));
+    }
+
+    function markSelection(tileEl, correct){
+      clearSelections();
+      tileEl.classList.add('selected');
+      if(!correct){
+        tileEl.classList.add('wrong');
+        setTimeout(() => tileEl.classList.remove('wrong'), 450);
+      }
+    }
+
+    // ==================== INPUT ====================
+    function handleTileClick(tileEl){
+      if(!tileEl || solved) return;
+
+      if(tickOn) ensureAudio(); // unlock audio on user gesture
+
+      const idx = Number(tileEl.dataset.index);
+      const round = rounds[currentRound];
+
+      if(!revealed.has(idx)){
+        flipTile(tileEl, idx);
+        return;
+      }
+
+      if(revealed.size < 4){
+        setFeedback(`Keep going — reveal all four first.`);
+        return;
+      }
+
+      const isCorrect = idx === round.odd;
+      markSelection(tileEl, isCorrect);
+
+      if(isCorrect){
+        solved = true;
+        score += 1;
+        scoreEl.textContent = String(score);
+        stopTimer();
+        setFeedback(`<strong>Correct!</strong> ${round.explain}`);
+        nextBtn.style.display = 'inline';
+      }else{
+        setFeedback(`Not quite. Try again. <em>Hint:</em> compare texture, base, and plating.`);
+      }
+    }
+
+    boardEl.addEventListener('click', (e) => {
+      const tile = e.target.closest('.tile');
+      handleTileClick(tile);
+    });
+
+    boardEl.addEventListener('keydown', (e) => {
+      if(e.key !== 'Enter' && e.key !== ' ') return;
+      const tile = e.target.closest('.tile');
+      if(!tile) return;
+      e.preventDefault();
+      handleTileClick(tile);
+    });
+
+    // ==================== NAV ====================
+    function nextRound(){
+      if(currentRound < rounds.length - 1){
+        currentRound += 1;
+        initRound();
+      }else{
+        stopTimer();
+        setFeedback(`<strong>Archive Master!</strong><br/>Final score: ${score}/${rounds.length}`);
+        nextBtn.style.display = 'none';
+      }
+    }
+
+    function restart(){
+      stopTimer();
+      currentRound = 0;
+      score = 0;
+      scoreEl.textContent = '0';
+      initRound();
+    }
+
+    nextBtn.addEventListener('click', nextRound);
+    restartBtn.addEventListener('click', restart);
+
+    // ==================== START ====================
+    updateTickButton();
+    initRound();
+  </script>
+</body>
+</html>
